feat: Implement Event Management API with OhmaApiResponse
- Updated EventController to utilize OhmaApiResponse for consistent API responses across all endpoints.
  - Changed response types to ResponseEntity<OhmaApiResponse<T>> for all methods.
  - Wrapped successful responses in OhmaApiResponse with appropriate status and messages.
  - Enhanced error handling to return OhmaApiResponse for error cases, providing clearer feedback to clients.

- Refactored EventServiceImpl to ensure proper mapping between Event and EventDto.
  - Implemented create and update methods with checks for course and user existence, throwing ResourceNotFoundException when necessary.
  - Added logging for key operations to facilitate debugging and monitoring.

- Ensured adherence to architectural patterns by extending BaseService and BaseServiceImpl in EventService and EventServiceImpl, respectively.
- Maintained Swagger annotations for API documentation, ensuring that all endpoints are well-documented for ease of use.

This commit enhances the overall structure and usability of the Event Management API, providing a more robust and user-friendly interface for managing calendar events.